# Testing-Project

./: CMakeLists.txt  README.md  main.cpp
src/: Server.h  Simulator.h  Visitor.h  input.txt  output.txt
tests/: VisitoTest.h  gtest.cpp  gtest_fixture.cpp  inputTest.txt
